--- a/index.html
+++ b/index.html
@@ -3,7 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Air Quality Monitor - TEMPO Mission</title>
+    
+    <!-- SEO: Title Tag -->
+    <title>Live Air Quality Index (AQI) Map - Real-time Pollution Data</title>
+
+    <!-- SEO: Meta Tags -->
+    <meta name="description" content="Track real-time air quality and pollution levels anywhere in the world. Get live AQI data, weather updates, and health recommendations with our interactive map.">
+    <meta name="keywords" content="air quality, aqi, pollution, live map, air quality index, weather, real-time data, air pollution monitor">
+    <meta name="author" content="Digital Minds Team">
+    <link rel="canonical" href="https://air-quality-monitor-3.netlify.app" /> <!-- Replace with your actual URL -->
+
+    <!-- SEO: Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://air-quality-monitor-3.netlify.app"> <!-- Replace with your actual URL -->
+    <meta property="og:title" content="Live Air Quality Index (AQI) Map">
+    <meta property="og:description" content="Track real-time air quality and pollution levels with our interactive map.">
+    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png">
+
+    <!-- SEO: Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://air-quality-monitor-3.netlify.app"> <!-- Replace with your actual URL -->
+    <meta property="twitter:title" content="Live Air Quality Index (AQI) Map">
+    <meta property="twitter:description" content="Track real-time air quality and pollution levels with our interactive map.">
+    <meta property="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png">
+    <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png">
 
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,7 +41,7 @@
 
     <!-- LeafletJS for maps -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha26-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <!-- Custom Styles -->
     <style>
@@ -82,8 +108,8 @@
                     <p id="forecast-text" class="text-xs text-gray-700">Analyzing data...</p>
                 </div>
                  <div class="mt-4 text-center text-xs text-gray-500">
-                    <p>Powered by the nearest ground-station and weather data.</p>
-                </div>
+                     <p>Powered by the nearest ground-station and weather data.</p>
+                 </div>
             </div>
         </div>
     </div>
@@ -301,7 +327,18 @@
                 if (permission === "granted") {
                     toggleCitySubscription();
                 } else if (permission === "denied") {
-                    alert("You have previously blocked notifications. Please enable them in your browser's site settings.");
+                    // Use a custom modal/alert in a real app instead of window.alert
+                    const modal = document.createElement('div');
+                    modal.className = 'fixed inset-0 bg-black bg-opacity-50 z-[3000] flex justify-center items-center';
+                    modal.innerHTML = `
+                        <div class="bg-white p-6 rounded-lg shadow-xl text-center w-96">
+                            <h3 class="text-lg font-bold">Notifications Blocked</h3>
+                            <p class="text-sm text-gray-600 my-4">You have previously blocked notifications. Please enable them in your browser's site settings to receive alerts.</p>
+                            <button class="px-4 py-2 rounded text-white bg-blue-500 hover:bg-blue-600">OK</button>
+                        </div>
+                    `;
+                    document.body.appendChild(modal);
+                    modal.querySelector('button').onclick = () => document.body.removeChild(modal);
                 } else {
                     notificationModal.classList.remove('hidden');
                 }
@@ -314,10 +351,10 @@
                 const cityIndex = subscribedCities.indexOf(cityName);
                 if (cityIndex > -1) {
                     subscribedCities.splice(cityIndex, 1);
-                     new Notification(`${cityName} Unsubscribed`, { body: "You will no longer receive alerts for this city.", icon: 'https://placehold.co/32x32/9ca3af/ffffff?text=X' });
+                     new Notification(`${cityName} Unsubscribed`, { body: "You will no longer receive alerts for this city.", icon: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png' });
                 } else {
                     subscribedCities.push(cityName);
-                    new Notification(`${cityName} Subscribed!`, { body: "You will now receive air quality alerts for this city.", icon: 'https://placehold.co/32x32/3498db/ffffff?text=AQ' });
+                    new Notification(`${cityName} Subscribed!`, { body: "You will now receive air quality alerts for this city.", icon: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png' });
                 }
                 
                 localStorage.setItem('subscribedCities', JSON.stringify(subscribedCities));
