--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <meta name="description" content="Track real-time air quality and pollution levels anywhere in the world. Get live AQI data, weather updates, and health recommendations with our interactive map, developed by Ahmed Salem.">
     <meta name="keywords" content="air quality, aqi, pollution, live map, air quality index, weather, real-time data, ahmed salem, web developer, portfolio">
     <meta name="author" content="Ahmed Salem">
-    <link rel="canonical" href="https://your-website-url.com" /> <!-- Replace with your actual URL -->
+    <link rel="canonical" href="https://air-quality-monitor-3.netlify.app" /> <!-- Replace with your actual URL -->
 
     <!-- SEO: Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-website-url.com"> <!-- Replace with your actual URL -->
+    <meta property="og:url" content="https://air-quality-monitor-3.netlify.app"> <!-- Replace with your actual URL -->
     <meta property="og:title" content="Air Quality Monitor - Live AQI & Pollution Map">
     <meta property="og:description" content="Track real-time air quality and pollution levels with our interactive map.">
     <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png">
 
     <!-- SEO: Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-website-url.com"> <!-- Replace with your actual URL -->
+    <meta property="twitter:url" content="https://air-quality-monitor-3.netlify.app"> <!-- Replace with your actual URL -->
     <meta property="twitter:title" content="Air Quality Monitor - Live AQI & Pollution Map">
     <meta property="twitter:description" content="Track real-time air quality and pollution levels with our interactive map.">
     <meta property="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjk7K0IOVXn7WvuM8wl4rXWpCAvvMG8mUjenuSlZsBh6iUeoH8SlHd-dzzCdnIoSxHr6atY7R8fQKji1gIeZ282QhKL-QbXSEUaayoYuxFdtWtogbLhcBOwBAKWuKcolUYEzDxDd8xkgjP-ZSIsIS1DsSx_50DhHDoUp8LVN1hDsy-jHCJxn4vbPnoKnYE/s1260/favicon.png">
