--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 forgotPasswordTitle: "Reset Password",
                 forgotPasswordInstructions: "Enter your email and we'll send you a link to reset your password.",
                 sendResetLinkButton: "Send Reset Link",
-                resetEmailSent: "Password reset email sent! Please check your inbox.",
+                resetEmailSent: "Password reset email sent! Please check your inbox and spam folder.",
                 changePasswordTitle: "Change Password",
                 currentPasswordPlaceholder: "Current Password for verification",
                 newPasswordPlaceholder: "New Password (min. 6 characters)",
@@ -412,7 +412,7 @@
                 forgotPasswordTitle: "إعادة تعيين كلمة المرور",
                 forgotPasswordInstructions: "أدخل بريدك الإلكتروني وسنرسل لك رابطًا لإعادة تعيين كلمة المرور.",
                 sendResetLinkButton: "أرسل رابط الاستعادة",
-                resetEmailSent: "تم إرسال بريد إعادة تعيين كلمة المرور! يرجى التحقق من بريدك الوارد.",
+                resetEmailSent: "تم إرسال بريد إعادة تعيين كلمة المرور! يرجى التحقق من بريدك الوارد ومجلد الرسائل غير المرغوب فيها (Spam).",
                 changePasswordTitle: "تغيير كلمة المرور",
                 currentPasswordPlaceholder: "كلمة المرور الحالية للتحقق",
                 newPasswordPlaceholder: "كلمة المرور الجديدة (6 أحرف على الأقل)",
@@ -1023,4 +1023,3 @@
     </script>
 </body>
 </html>
-
