--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                    style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://unpkg.com https://fonts.googleapis.com; 
                    font-src 'self' https://fonts.gstatic.com; 
                    img-src 'self' https: data: blob:;
-                   connect-src 'self' https://*.firebaseio.com wss://*.firebaseio.com https://api.imgbb.com https://api.waqi.info https://api.openweathermap.org https://www.google-analytics.com https://firebaseinstallations.googleapis.com;">
+                   connect-src 'self' https://*.firebaseio.com wss://*.firebaseio.com https://identitytoolkit.googleapis.com https://api.imgbb.com https://api.waqi.info https://api.openweathermap.org https://www.google-analytics.com https://firebaseinstallations.googleapis.com;">
 
     <title>Air Quality Monitor - Live AQI & Pollution Map by Ahmed Salem</title>
     <meta name="description" content="Track real-time air quality and pollution levels anywhere in the world. Get live AQI data, weather updates, and health recommendations with our interactive map, developed by Ahmed Salem.">
